--- a/assets/style.css
+++ b/assets/style.css
@@ -8,3 +8,15 @@
 
     /*font-family: 'Open Sans', sans-serif;*/
 }
+
+body {
+    display: flex;
+    min-height: 100vh;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+}
+
+body h1 {
+    color: #4C3494;
+}
