--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,18 +5,11 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
-
     /*font-family: 'Open Sans', sans-serif;*/
 }
 
 body {
-    display: flex;
     min-height: 100vh;
     width: 100vw;
-    justify-content: center;
-    align-items: center;
-}
-
-body h1 {
-    color: #4C3494;
+    overflow-x: hidden;
 }
